# ECEN_631

./: .gitignore  README.md
Assignment_1/: task_1.py  task_2.py  task_3.py  test_space.py
Assignment_2/task_1/: CMakeLists.txt  task_1.cpp
Assignment_2/task_2/: CMakeLists.txt  task_2.cpp
Assignment_2/task_3/: task_3.cpp
Assignment_2/task_4/: CMakeLists.txt  CMakeLists.txt~  data_points.txt  task_4.cpp
Assignment_2/task_5/: CMakeLists.txt  task_5.cpp
Assignment_2/task_6/: CMakeLists.txt  task_6.cpp
Assignment_3/task_1/: task_1.cpp
Assignment_3/task_2/: CMakeLists.txt  task_2.cpp
Assignment_3/task_3/: CMakeLists.txt  task_3.cpp
Assignment_3/task_4/: CMakeLists.txt  task_4.cpp
Assignment_4/: 3DWorldBallPointsL.xml  CMakeLists.txt~  ballPointsL.xml  leftCam3DBallCoords.txt  rightCam3DBallCoords.txt  task_1.cpp
Assignment_4/task_1/: task_1.cpp
Assignment_4/task_2/: CMakeLists.txt  task_2.cpp
Assignment_4/task_3/: CMakeLists.txt  CMakeLists.txt~  balltrajectories.m  balltrajectories.m~  task_3.cpp
Assignment_5/task_1/: CMakeLists.txt~  task_1.cpp
Assignment_5/task_2/: task_2.cpp
Assignment_5/task_2_practice/: CMakeLists.txt~  task_2_practice.cpp
Assignment_5/task_3/: CMakeLists.txt~  task_3.cpp
Assignment_6/: first_and_last_parallel_cube.xml  first_and_last_parallel_real.xml  first_and_last_turned_cube.xml  first_and_last_turned_real.xml
Assignment_6/task_1/: CMakeLists.txt  CMakeLists.txt~  task_1.cpp
Assignment_6/task_2/: CMakeLists.txt  allImageSets.txt  parallel_cube_data.txt  parallel_real_data.txt  rotation_and_translation_parallel_cube.xml  rotation_and_translation_parallel_real.xml  rotation_and_translation_turned_cube.xml  rotation_and_translation_turned_real.xml  task_2.cpp  turned_cube_data.txt  turned_real_data.txt
Assignment_6/task_3/: CMakeLists.txt  parallel_cube_translation_and_scale_factor.txt  parallel_real_translation_and_scale_factor.txt  task_3.cpp  turned_cube_translation_and_scale_factor.txt  turned_real_translation_and_scale_factor.txt
Assignment_7/task_1/: CMakeLists.txt  CMakeLists.txt~  plots.m  task_1.cpp
Assignment_7/task_3/: CMakeLists.txt  plots_task_3.m  task_3.cpp
Assignment_8/: generate_plots.m  my_vo_data_hall.txt  my_vo_data_practice.txt
Assignment_8/Task_1/: CMakeLists.txt  task_1.cpp
TestSpace/TestSpace/: TestSpace.pro  main.cpp
baseball_catcher/Dallin/: CMakeLists.txt  main.cpp
baseball_catcher/Jesse_New/: BBJesse.cpp  CMakeLists.txt
build-c++_read_video-Desktop_Qt_5_7_0_GCC_64bit-Default/: CMakeCache.txt  Makefile  c++_read_video  c++_read_video.cbp  cmake_install.cmake
build-visual_inspection-Desktop_Qt_5_7_0_GCC_64bit-Default/: CMakeCache.txt  Makefile  VisualInspectionProject  VisualInspectionProject.cbp  cmake_install.cmake
c++_read_video/: CMakeLists.txt  main.cpp
monster_truck/MyIOIOApp/: import-summary.txt  settings.gradle
monster_truck/MyIOIOApp/app/src/androidTest/java/edu/byu/rvl/myioioapp/: ApplicationTest.java
monster_truck/MyIOIOApp/app/src/main/: AndroidManifest.xml
monster_truck/MyIOIOApp/app/src/main/java/edu/byu/rvl/myioioapp/: MyIOIOActivity.java
monster_truck/MyIOIOApp/app/src/main/res/drawable-hdpi/: roundshapebtn.xml
monster_truck/MyIOIOApp/app/src/main/res/layout/: activity_my_ioio.xml
monster_truck/MyIOIOApp/app/src/main/res/menu/: menu_my_ioio.xml
monster_truck/MyIOIOApp/app/src/main/res/values/: strings.xml
monster_truck/MyIOIOApp/app/src/main/res/xml/: accessory_filter.xml  device_filter.xml
monster_truck/MyIOIOApp/gradle/wrapper/: gradle-wrapper.properties
monster_truck/MyIOIOApp/iOIOLibAccessory/src/main/java/ioio/lib/android/accessory/: Adapter.java
visual_inspection/: CMakeLists.txt  main.cpp
